v.1.5.1
- fixed bug on Windows where once override or fallback were set they could not be unset
- changed artist bio download so it downloads even if just showing the override images
- updated artist bio infolabel to filter out link to READ MORE on last.fm
- new language files for Danish and Italian
- changed over to Frodo .po language files
- updated addon.xml with new information and format for repo database

v.1.5.0
- updated language files from Transifex
- branched Eden and Frodo versions and updated Frodo addon.xml information

v.1.4.6
- fix for improper parsing of multiple artists
- fix multiartist display in cases where first artist has no images
- fixed script error when using utf-8 encoded text in download pop up messages
- added English strings.po file  for Frodo and added addon to transifex translation engine

v.1.4.5
- fix for improper clearing of info labels on XBMC abort request

v.1.4.4
- fix for non-ascii characters in windows user name
- fix for non-ascii characters in artist name
- download notifications disabled by default with option to enable them

v.1.4.3
unreleased beta

v.1.4.2
- updated featured artist parsing to support radio streams
- updated featured artist parsing to support calls from external scripts
- updated the notifications logic when downloading images
- added notification if no images downloaded
- added notification when all downloads complete
- added ability to override artist bio, albums, and similar artists with local info
- fixed bug when using both local and remote images
- added French localization strings and description (thanks to mikebzh44)
- updated Portuguese-Brazil strings (thanks to Wanilton)
- UTF8 encoded message strings

v.1.4.1
- updated language files for Portuguese-Brazil (thanks to Wanilton)
- fixed error causing information for 50th album to not be cleared

v.1.4.0
- added ability to display artwork from multiple artists simultaneously
- added option for a folder name other than extrafanart