@@ -2,8 +2,9 @@ v.1.5.1
 - fixed bug on Windows where once override or fallback were set they could not be unset
 - changed artist bio download so it downloads even if just showing the override images
 - updated artist bio infolabel to filter out link to READ MORE on last.fm
+- changed to using JSON call to get artist array from XBMC rather than manually splitting
 - new language files for Danish and Italian
-- changed over to Frodo .po language files
+- changed over to Frodo .po language files (coming)
 - updated addon.xml with new information and format for repo database
 
 v.1.5.0
